<resources>
    <string name="app_name">Box1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_usuario_email_com">usuario@email.com</string>
    <string name="hint_contrasenia">contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="f1">F1</string>
    <string name="wrc">WRC</string>
    <string name="resistencia">Resistencia</string>
    <string name="todos">Todos</string>
    <string name="comprar">Comprar</string>
    <string name="no_recuerdas_la_contrase_a_haz_click_aqu">¿No recuerdas la contraseña? Haz click aquí.</string>
    <string name="mis_favoritos">Mis favoritos</string>
    <string name="t_tulo">Título</string>
    <string name="a_adir_im_genes">Añadir imágenes</string>
    <string name="escala_ej_1_18">Escala (ej. 1:18)</string>
    <string name="precio">Precio (€)</string>
    <string name="marca">Marca</string>
    <string name="categor_a_seleccione_una_opci_n">Categoría (Seleccione una opción)</string>
    <string name="estado_seleccione_una_opci_n">Estado (Seleccione una opción)</string>
    <string name="descripci_n">Descripción</string>
    <string name="publicar">Publicar</string>
    <string name="otros">Otros</string>
    <string name="wec">WEC</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="mis_direcciones">Mis direcciones</string>
    <string name="contrase_a">Contraseña *</string>
    <string name="repita_la_contrase_a_">Repita la contraseña *</string>
    <string name="la_contrase_a_debe_contener_n_un_m_nimo_de_6_car_cteres">*La contraseña debe contener \n un mínimo de 6 carácteres</string>
    <string name="descripci_n_del_producto">Descripción del producto...</string>
    <string name="estado_nuevo">Estado: Nuevo</string>
    <string name="escala_1_18">Escala: 1:18</string>
    <string name="introduzca_su_direcci_n">Introduzca su dirección</string>
    <string name="calle_y_n_mero">Calle y número</string>
    <string name="portal">Portal</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="c_digo_postal">Código postal</string>
    <string name="codigo_postal">Código postal</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="mi_direcci_n">Mi dirección</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="direcci_n_de_env_o">Dirección de envío</string>
    <string name="m_todo_de_env_o">Método de envío</string>
    <string name="correos_est_ndar_3_5_d_as_gratis">Correos estándar (3-5 días) Gratis</string>
    <string name="env_o_express_24h_5_00">Envío express 24h +5,00€</string>
    <string name="m_todo_de_pago">Método de pago</string>
    <string name="contrarreembolso">Contrarreembolso</string>
    <string name="google_pay">Google Pay</string>
    <string name="precio_del_producto_20">Precio del producto: 20€</string>
    <string name="env_o_0">Envío: 0€</string>
    <string name="total_20">Total: 20€</string>
</resources>