<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingBottom="80dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textoComprar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/confirmar_compra"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layoutCompra"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/spinner_background"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textoComprar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp">

            <!-- Dirección -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direcci_n_de_env_o"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextCalle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="12dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/introduzca_su_direcci_n" />

            <EditText
                android:id="@+id/editTextPortal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="12dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/portal" />

            <EditText
                android:id="@+id/editTextCiudad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="12dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/ciudad" />

            <EditText
                android:id="@+id/editTextProvincia"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="12dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/provincia" />

            <EditText
                android:id="@+id/editTextCodigoPostal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:paddingLeft="12dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/c_digo_postal" />

            <!-- Envío -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_todo_de_env_o"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="12dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkboxCorreos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correos_est_ndar_3_5_d_as_gratis"
                android:textColor="@color/black"
                app:buttonTint="@color/blue"
                android:layout_marginBottom="4dp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkboxExpress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/env_o_express_24h_5_00"
                android:textColor="@color/black"
                app:buttonTint="@color/blue"
                android:layout_marginBottom="24dp" />


            <!-- Pago -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_todo_de_pago"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="12dp" />

            <RadioGroup
                android:id="@+id/radioGroupPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <RadioButton
                    android:id="@+id/radioContraReembolso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrarreembolso"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioGooglePay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_pay"
                    android:textColor="@color/black" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/layoutDesglosePrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textPrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_del_producto_20"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/textPrecioEnvio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/env_o_0"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/textPrecioTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_20"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>


            <!-- Botón Confirmar -->
            <Button
                android:id="@+id/btnConfirmarCompra"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/confirmar_compra"
                android:backgroundTint="#0B1B4E"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
