<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0D4E4"
    tools:context=".vista.SubirProducto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:fillViewport="true"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_subir_imagenes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/a_adir_im_genes"
                android:textColor="@color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagenesViewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/tituloProducto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/t_tulo"
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="10dp" />

            <EditText
                android:id="@+id/escalaProducto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/escala_ej_1_18"
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="10dp" />

            <EditText
                android:id="@+id/precioProducto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/precio"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/marcaProducto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/marca"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categor_a_seleccione_una_opci_n"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:paddingStart="4dp" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/spinner_background"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_seleccione_una_opci_n"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:paddingStart="4dp"
                tools:ignore="RtlSymmetry" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/spinner_background"
                android:padding="10dp" />

            <EditText
                android:id="@+id/descripcionProducto"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_style"
                android:gravity="top"
                android:hint="@string/descripci_n"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_publicar_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue"
                android:text="@string/publicar"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
