<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    tools:context=".vista.Direccion">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textoFavoritos"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/mi_direcci_n"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutFormulario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/textoFavoritos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/calle_y_n_mero"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCalle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="12dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/introduzca_su_direcci_n" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/portal"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextPortal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="12dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/portal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ciudad"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="12dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/ciudad" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/provincia"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextProvincia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="12dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/provincia" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/c_digo_postal"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextCodigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:paddingLeft="12dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/codigo_postal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <Button
                        android:id="@+id/btnGuardarDireccion"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="#0B1B4E"
                        android:text="@string/guardar"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btnEditarDireccion"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="#0B1B4E"
                        android:text="@string/editar"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
