<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0D4E4"
    tools:context=".vista.Inicio">

    <SearchView
        android:layout_width="352dp"
        android:layout_height="38dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittext_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewinicio"
        android:layout_width="400dp"
        android:layout_height="575dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="140dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/blue"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/listatodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/listaf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/listawrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrc" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/listaresistencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resistencia" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>